app/src/assets/pages/home.less
/* ... */
.chat-container {
  flex: 1 1 auto;
  min-width: 0;
  height: 100%;
  background: hsla(var(--background-container));
  transition: width 0.2s ease-in-out;

  .chat-wrapper {
    display: flex;
    flex-direction: column;
    width: 100%;
    height: 100%;
  }

  .tooltip {
    user-select: none;

    strong {
      font-weight: 600 !important;
    }
  }

  .chat-product {
    position: relative;
    display: flex;
    flex-direction: column;
    flex-grow: 1;
    width: 100%;
    overflow: hidden;
    justify-content: center;
    align-items: center;

    button {
      margin: 0.5rem 0;
      white-space: nowrap;
    }

    .space-footer {
      position: absolute;
      display: flex;
      flex-direction: column;
      align-items: center;
      bottom: 6px;
      user-select: none;
      font-size: 14px;
      color: hsl(var(--text-secondary));

      p {
        display: flex;
        flex-direction: row;
        align-items: center;
        white-space: nowrap;

        &:first-child {
          margin-bottom: 4px;
        }
      }

      a {
        color: hsl(var(--text));
        text-decoration: none;
        transition: 0.25s;
        cursor: pointer;
      }
    }
  }

  .chat-content {
    flex-grow: 1;
    width: 100%;
    overflow-x: hidden;
    overflow-y: auto;
    touch-action: pan-y;

    .chat-messages-wrapper {
      width: 100%;
      height: 100%;
      display: flex;
      flex-direction: column;
      padding: 18px 24px;
    }

    .message {
      margin-bottom: 0.75rem;

      &:last-child {
        margin-bottom: 0;
      }
    }
  }

  .chat-input {
    flex-shrink: 0;
    width: 100%;
    overflow: hidden;
    padding: 0.5rem 1rem 1rem;

    .input-action {
      display: flex;
      flex-direction: row;
      align-items: center;
      justify-content: center;
      margin-bottom: 6px;

      .action {
        display: inline-flex;
        flex-direction: row;
        align-items: center;
        overflow: hidden;
        margin-right: 4px;
        width: 36px;
        height: 24px;
        border-radius: 12px;
        padding: 4px 10px;
        transition: 0.5s;
        cursor: pointer;
        border: 1px solid hsl(var(--border));
        color: hsl(var(--text-secondary));
        user-select: none;
        transition-delay: 0.25s;

        svg {
          color: hsl(var(--text-secondary));
          flex-shrink: 0;
          width: 16px;
          height: 16px;
          padding: 1px;
        }

        .text {
          font-size: 12px;
          white-space: nowrap;
          transform: translateY(-0.5px);
          opacity: 0;
          transition: 0.3s;
          transition-delay: 0.3s;
          margin-left: 4px;
          transition-property: opacity;
        }

        &:hover {
          border-color: hsl(var(--border-hover));
          width: calc(42px + var(--width));

          .text {
            opacity: 1;
          }
        }

        &.active {
          background: hsl(var(--input));
          border-color: hsl(var(--border-active));
          color: hsl(var(--text));
        }

        &:last-child {
          margin-right: 0;
        }
      }
    }

    .input-wrapper {
      position: relative;
      display: flex;
      flex-direction: row;
      align-items: center;
      flex-wrap: nowrap;
      width: 100%;
      height: min-content;

      .chat-box {
        position: relative;
        flex-grow: 1;
      }

      .input-box {
        resize: none;
        width: 100%;
        color: hsl(var(--text));
        white-space: pre-wrap;
        scrollbar-width: thin;
        padding-right: 3rem;

        &.align {
          text-align: center;
        }

        &::placeholder {
          color: hsl(var(--text-secondary));
          opacity: 1;
          transition: opacity 0.3s ease, visibility 0.3s ease;
        }

        &:active::placeholder,
        &:focus::placeholder {
          opacity: 0;
          visibility: hidden;
        }

        @-moz-document url-prefix() {
          &::-moz-placeholder {
            opacity: 1;
            transition: opacity 0.3s ease, visibility 0.3s ease;
            visibility: visible;
          }

          &:active::-moz-placeholder,
          &:focus::-moz-placeholder {
            opacity: 0;
            visibility: hidden;
          }
        }
      }

      .action-button {
        position: absolute;
        padding: 0 6px;
        right: 0.5rem;
        bottom: 0.5rem;

        .send-icon {
          fill: hsl(var(--text));
        }
      }
    }

    .input-options {
      margin: 12px auto -8px;
      display: flex;
      flex-direction: row;
      align-items: center;
      justify-content: center;
      flex-wrap: wrap;
      gap: 4px;
      height: min-content;
    }
  }
}

.share-wrapper {
  display: flex;
  flex-direction: row;
  gap: 6px;
  width: 100%;

  input {
    text-align: center;
    font-size: 16px;
    cursor: pointer;
    flex-grow: 1;
  }

  button {
    flex-shrink: 0;
  }
}

.contact-image {
  margin-top: 0.75rem;
  max-width: min(60vw, 420px);
  max-height: 50vh;
  border-radius: var(--radius);
}

.version {
  display: flex;
  flex-direction: row;
  align-items: center;
  user-select: none;
  font-size: 14px;
  color: hsl(var(--text-secondary));
  transform: translateY(4px);
  width: max-content;
  margin: 0 auto;

  .app {
    margin-right: 2px;
    padding: 2px;
    width: 24px;
    height: 24px;
    color: hsl(var(--text-secondary));
    cursor: pointer;
    transition: 0.25s;
    rotate: 0;

    &:hover {
      color: hsl(var(--text));
      rotate: 30deg;
    }
  }

  p {
    font: var(--font-family-normal);
    transform: translateY(-1px);
  }
}

